tests/core/ill-typed/extra-tests/multiparameter-functions/bad-cmp-5.stella
language core;

extend with #multiparameter-functions, #comparison-operators;

fn cmp_fn(n : Nat, m : Bool) -> Nat {
    return if (n == m) then 0 else succ(0)
}

fn main(n : Nat) -> Nat {
  return cmp_fn(n, true)
}
